--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "flowbite": "^1.3.4",
+    "google-map-react": "^2.1.10",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
+    "dotenv": "^16.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
